# xtask

./: Cargo.toml  README.md
src/: apple.rs  arch.rs  fs.rs  hash.rs  latest_json.rs  lib.rs  process.rs  repo.rs
src/dmg/: mod.rs
src/github_actions/: mod.rs
src/sparkle/: mod.rs
