[package]
name = "xtask"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
authors = ["ArcBox Labs <team@arcbox.dev>"]
license = "MIT OR Apache-2.0"
description = "Reusable building blocks for Rust xtask automation."
readme = "README.md"
repository = "https://github.com/arcboxlabs/xtask"
homepage = "https://github.com/arcboxlabs/xtask"
documentation = "https://docs.rs/xtask"
keywords = ["xtask", "automation", "release", "macos", "codesign"]
categories = ["development-tools::build-utils", "command-line-utilities"]
exclude = [".github/"]

[dependencies]
anyhow = "1.0.102"
plist = { version = "1.8.0", optional = true }
quick-xml = { version = "0.39.4", optional = true }
serde_json = { version = "1.0.145", optional = true }
sha2 = { version = "0.10", optional = true }
time = { version = "0.3.44", features = ["formatting", "macros"], optional = true }
xshell = { version = "0.2.7", optional = true }

[features]
default = ["hash", "process"]
apple = ["process", "dep:plist"]
dmg = ["apple", "hash"]
github-actions = []
hash = ["dep:sha2"]
latest-json = ["dep:serde_json", "dep:time"]
process = ["dep:xshell"]
sparkle = ["dep:quick-xml", "dep:time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
